--- a/main.css
+++ b/main.css
@@ -1,9 +1,17 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Montserrat", sans-serif;
+  margin: 0;
 }
 
 #product-overview {
   background-color: #ff1b68;
+  width: 100%;
+  height: 528px;
+  padding: 10px;
 }
 
 .section-title {
@@ -19,3 +27,49 @@ body {
 /* h1 {
   font-family: sans-serif;
 } */
+
+.main-header {
+  width: 100%;
+  background-color: #2ddf5c;
+  padding: 8px 16px;
+}
+
+.main-header > div {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.main-header__brand {
+  color: #0e4f1f;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 22px;
+}
+
+.main-nav {
+  display: inline-block;
+  text-align: right;
+  width: calc(100% - 75px);
+  vertical-align: middle;
+}
+
+.main-nav__items {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.main-nav__item {
+  display: inline-block;
+  margin: 0 16px;
+}
+
+.main-nav__item a {
+  color: #0e4f1f;
+  text-decoration: none;
+}
+
+.main-nav__item a:hover,
+.main-nav__item a:active {
+  color: white;
+}
