--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@
   width: 100%;
   height: 528px;
   padding: 10px;
+  position: relative;
 }
 
 .section-title {
@@ -15,6 +16,9 @@
 #product-overview h1 {
   color: white;
   font-family: "Anton", sans-serif;
+  position: absolute;
+  bottom: 5%;
+  left: 3%;
 }
 
 .plans {
