--- a/main.css
+++ b/main.css
@@ -1,9 +1,19 @@
 #product-overview {
   /* background-color: #ff1b68; */
   background-image: url("freedom.jpg");
+  background-size: cover; /*width and height e.g. 100px/30% 200px/100%*/
+  background-repeat: no-repeat;
+  /* background-position: 0% 100%; */ /*x-axis(left side) y-axis-(top edge)*/
+  background-position: left 10% bottom 20%;
+  background-origin: border-box;
+  background-clip: border-box;
+  /* background-attachment: scroll; */
   width: 100%;
   height: 528px;
   padding: 10px;
+
+  border: 5px dashed red;
+  margin-top: 43px;
   position: relative;
 }
 
