--- a/customers/customers.css
+++ b/customers/customers.css
@@ -1,6 +1,6 @@
 .testimonial {
-  font-size: 20px;
-  margin: 48px 0;
+  font-size: 1.2rem;
+  margin: 3rem 0;
 }
 
 .testimonial__list {
@@ -9,15 +9,15 @@
 }
 
 .testimonial:first-of-type {
-  margin-top: 96px;
+  margin-top: 6rem;
 }
 
 .testimonial__image-container {
   width: 65%;
+  max-width: 580px;
   display: inline-block;
   vertical-align: middle;
-
-  box-shadow: 3px 3px 3px 4px rgba(0, 0, 0, 0.3);
+  box-shadow: 3px 3px 5px 4px rgba(0, 0, 0, 0.3);
 }
 
 .testimonial__image {
@@ -27,7 +27,7 @@
 
 .testimonial__info {
   text-align: right;
-  padding: 14px;
+  padding: 0.9rem;
   display: inline-block;
   vertical-align: middle;
   width: 30%;
@@ -42,14 +42,15 @@
 }
 
 .testimonial__name {
-  margin: 3px;
+  margin: 0.2rem;
   color: #ff5454;
+  font-size: 2rem;
 }
 
 .testimonial__subtitle {
   margin: 0;
-  font-size: 18px;
   color: #ccc;
+  font-size: 1.1rem;
 }
 
 .testimonial__subtitle a {
@@ -63,5 +64,5 @@
 }
 
 .testimonial__text {
-  margin: 3px;
+  margin: 0.2rem;
 }
