--- a/shared.css
+++ b/shared.css
@@ -7,10 +7,21 @@ body {
   margin: 0;
 }
 
+.backdrop {
+  position: fixed;
+  left: 0;
+  top: 0;
+  display: none;
+  z-index: 100;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
 .main-header {
   width: 100%;
   background-color: #2ddf5c;
-  padding: 8px 16px;
+  padding: 0.5rem 1rem;
   position: fixed;
   z-index: 1;
   top: 0;
@@ -26,9 +37,9 @@ body {
   color: #0e4f1f;
   text-decoration: none;
   font-weight: bold;
-  font-size: 22px;
+  font-size: 1.38rem;
   /* height: 22px; */
-  width: 22px;
+  width: 1.38rem;
   display: inline-block;
 }
 
@@ -40,7 +51,7 @@ body {
 .main-nav {
   display: inline-block;
   text-align: right;
-  width: calc(100% - 75px);
+  width: calc(100% - 74px);
   vertical-align: middle;
 }
 
@@ -52,14 +63,14 @@ body {
 
 .main-nav__item {
   display: inline-block;
-  margin: 0 16px;
+  margin: 0 1rem;
 }
 
 .main-nav__item a {
   color: #0e4f1f;
   text-decoration: none;
   font-weight: bold;
-  padding: 3px 0;
+  padding: 0.19rem 0;
 }
 
 .main-nav__item a:hover,
@@ -71,7 +82,7 @@ body {
 .main-nav__item--cta a {
   color: white;
   background-color: #ff1b68;
-  padding: 8px 16px;
+  padding: 0.5rem 1rem;
   border-radius: 8px;
 }
 
@@ -87,7 +98,7 @@ body {
   color: white;
   font: inherit;
   border: 1.5px solid #0e4f1f;
-  padding: 8px;
+  padding: 0.5rem;
   border-radius: 8px;
   font-weight: bold;
   cursor: pointer;
@@ -105,8 +116,8 @@ body {
 
 .main-footer {
   background-color: black;
-  padding: 32px;
-  margin-top: 48px;
+  padding: 2rem;
+  margin-top: 3rem;
 }
 
 .main-footer__links {
@@ -118,7 +129,7 @@ body {
 
 .main-footer__link {
   display: inline-block;
-  margin: 0 16px;
+  margin: 0 1rem;
 }
 
 .main-footer__link a {
