Refactor CSS for improved responsiveness and layout; add media queries for various components including header, footer, and testimonials

--- a/main.css
+++ b/main.css
@@ -1,7 +1,6 @@
 #product-overview {
   background: linear-gradient(to top, rgba(80, 68, 18, 0.6) 10%, transparent),
-    url("images/freedom.jpg") left 10% bottom 80% / cover no-repeat border-box,
-    #ff1b68;
+    url("images/freedom.jpg") center / cover no-repeat border-box, #ff1b68;
   /* background-image: url("freedom.jpg");
     background-size: cover;
     background-position: left 10% bottom 20%; */
@@ -12,7 +11,7 @@
   /* background-image: radial-gradient(ellipse farthest-corner at 20% 50%, red, blue 70%, green); */
   width: 100vw;
   height: 33vh;
-  margin-top: 2.75rem;
+  /* margin-top: 3.5rem; */
   /* border: 5px dashed red; */
   position: relative;
 }
@@ -31,7 +30,7 @@
   font-size: 1.6rem;
 }
 
-@media (min-width: 40rem) {
+@media (min-width: 40rem) and (min-height: 40rem) {
   #product-overview {
     height: 40vh;
     background-position: 50% 25%;
@@ -42,26 +41,17 @@
   }
 }
 
-.plan__list {
-  width: 80%;
-  margin: auto;
-  text-align: center;
-}
-
 .plan {
   background: #d5ffdc;
   text-align: center;
   padding: 1rem;
-  margin: 0.5rem;
-  display: inline-block;
-  width: 30%;
-  vertical-align: middle;
+  margin: 0.5rem 0;
+  width: 100%;
 }
 
 .plan--highlighted {
   background: #19b84c;
   color: white;
-  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 .plan__annotation {
@@ -98,6 +88,27 @@
   margin: 0.5rem 0;
 }
 
+/* , means either of the condition is met  , (orientation: landscape)*/
+/* 'and' means both of the condition should be met and (orientation: landscape) */
+@media (min-width: 40rem) {
+  .plan__list {
+    width: 100%;
+    text-align: center;
+  }
+
+  .plan {
+    display: inline-block;
+    width: 30%;
+    vertical-align: middle;
+    min-width: 13rem;
+    max-width: 25rem;
+  }
+
+  .plan--highlighted {
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
+  }
+}
+
 #key-features {
   background: #ff1b68;
   margin-top: 5rem;
@@ -117,9 +128,7 @@
 }
 
 .key-feature {
-  display: inline-block;
-  width: 30%;
-  vertical-align: top;
+  /* vertical-align: top; */
 }
 
 .key-feature__image {
@@ -139,6 +148,15 @@
   font-size: 1.2rem;
 }
 
+@media (min-width: 40rem) {
+  .key-feature {
+    display: inline-block;
+    width: 30%;
+    max-width: 25rem;
+    vertical-align: top;
+  }
+}
+
 /* h1 {
     font-family: sans-serif;
 } */
@@ -147,13 +165,21 @@
   position: fixed;
   display: none;
   z-index: 200;
-  top: 20%;
-  left: 30%;
-  width: 40%;
+  top: 40%;
+  left: 10%;
+  width: 80%;
   background: white;
   padding: 1rem;
   border: 1px solid #ccc;
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+}
+
+@media (min-width: 40rem) {
+  .modal {
+    top: 40%;
+    left: 20%;
+    width: 60%;
+  }
 }
 
 .modal__title {
