--- a/packages/packages.css
+++ b/packages/packages.css
@@ -122,3 +122,24 @@ main {
   border: 1px solid #0e4f1f;
   color: #0e4f1f;
 }
+
+@media (min-width: 40rem) {
+  main {
+    margin-inline: auto;
+    max-width: 1500px;
+  }
+}
+
+@media (min-width: 1500px) {
+  .package {
+    border-left: 4px solid #0e4f1f;
+  }
+  #free {
+    border-right: 4px solid #0e4f1f;
+  }
+
+  #free:hover,
+  #free:active {
+    border-right-color: #ff5454;
+  }
+}
