Refactor font loading by moving Google Fonts imports to shared.css; update styles for button states and add padding to main sections in customers.css; create new start-hosting page with corresponding styles for signup form.

--- a/packages/packages.css
+++ b/packages/packages.css
@@ -54,6 +54,8 @@ main {
   font-size: 1rem;
   color: #0e4f1f;
   background-color: white;
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
 }
 
 .clearfix {
